<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/media_player"
        android:layout_width="match_parent"
        android:layout_height="200dp">
    </com.google.android.exoplayer2.ui.SimpleExoPlayerView>


    <TextView
        android:id="@+id/step_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:src="@drawable/exo_controls_previous"
            android:id="@+id/prev_step_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:src="@drawable/exo_controls_next"
            android:id="@+id/next_step_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

</LinearLayout>

